<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoMidPoint</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="searchLabel">Buscar Direccion</string>
    <string name="add">Añadir</string>
    <string name="search">Buscar</string>
    <string name="LocationLabel">Escribe tu localizacion</string>
    <string name="convexhull">Cierre Convexo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_list_places">Lista de Sitios</string>
    <string name="place">Sitios</string>
    <string name="delete">borrado</string>
    <string name="weightLabel">Peso</string>
    <string name="midpoint">Midpoint</string>
    <string name="center_min_dis">Ctro dists</string>
    <string name="avg_latlgn">Media Ltn\Long</string>
    <string name="near">Cerca de </string>
    <string name="action_help">Ayuda</string>
    <string name="mec">MEC</string>
    <string name="internetAdvise">Conexion a Internet necesaria para usar esta APP.</string>
    <string-array name="typesSearch" >
        <item>bar</item>
        <item>cafe</item>
        <item>casino</item>
        <item>movie_theater</item>
        <item>museum</item>
        <item>night_club</item>
        <item>restaurant</item>
    </string-array>

</resources>
