<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dia.upm.cconvexo.cconvexomap.CConvexoMap">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
<!--            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/searchLabel"
                android:id="@+id/textSearch"
                /> -->
            <AutoCompleteTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="30"
                android:layout_weight="1"
                android:id="@+id/editText"
                android:gravity="start"
                android:inputType="text"
                android:imeActionLabel="@string/LocationLabel"
                android:imeOptions="actionGo"
                android:hint="@string/LocationLabel"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="3"
                android:id="@+id/weightText"
                android:inputType="number"
                android:layout_gravity="end"
                android:text="1"
                android:hint="@string/weightLabel"
                />
            </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/convexhull"
                android:id="@+id/searchButton"
                android:height="10dp"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/add"
                android:id="@+id/addButton"
                android:src="@drawable/ic_content_new"
                android:height="10dp"
                />
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/placeButton"
                android:text="@string/place"
                android:src="@drawable/ic_collections_labels"
                android:height="10dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/deleteButton"
                android:text="@string/delete"
                android:src="@drawable/ic_action_content_discard"
                android:height="10dp"/>

            </LinearLayout>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal"
                android:id="@+id/rd_group_alght">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/midpoint"
                    android:id="@+id/rbt_midpoint"
                    android:onClick="changeAlgorithm"
                    />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/center_min_dis"
                    android:id="@+id/rbt_min_dist"
                    android:onClick="changeAlgorithm"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/avg_latlgn"
                    android:id="@+id/rbt_latlgn"
                    android:onClick="changeAlgorithm"/>
            </RadioGroup>

             <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal">

                        <fragment
                            android:id="@+id/map"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            class="com.google.android.gms.maps.SupportMapFragment"/>
                    </LinearLayout>




        </LinearLayout>

</RelativeLayout>
